# StormEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  Jenkinsfile  README.md  build.sh  buildNumber.properties  pom.xml  template.json  tsconfig.json
assets/Config/: keybinds.json  settings.json
assets/DB/: clearTables.sql  createTables.sql
assets/DB/auth/: createAuthTables.sql  retrievePassHash.sql
assets/DB/character/: createCharacterTables.sql
assets/Data/audio/: surface.json
assets/Data/entity/: creatures.json  foliage.json  items.json  objects.json  particles.json  projectile.json
assets/Data/entity/creatures/: animals.json  editor.json  goblin.json  human.json  skeleton.json  test.json
assets/Data/entity/foliage/: bushes.json  crops.json  flowers.json  grass.json  rocks.json  trees.json
assets/Data/entity/items/: clothing.json  debug_tools.json  fabs.json  hand_tools.json  materials.json  weapons.json
assets/Data/entity/objects/: containers.json  debug_objects.json  furniture.json  game_objects.json  testscene1objects.json
assets/Data/fab/: defaultHouse.fab  disjointedroom1.block  fant_house_1.block  fant_wall_section_1.block  fant_wall_section_end.block  test.block  wood_refined_floor.block
assets/Data/game/: biomes.json  blockTypes.json  civilizations.json  races.json  recipes.json  structure.json  symbolism.json  voxelTypes.json
assets/Data/game/recipes/: fabs.json  tools.json  voxelrecipes.json  weapons.json
assets/Data/game/units/: units.json
assets/Data/game/voxel/: test1.json  test2.json
assets/Data/macro/: jobs.json
assets/Data/menu/: npcintro.html  testwindow.html
assets/Data/menu/room/: roomToolConfig.html
assets/Data/tutorial/: hints.json
assets/Models/: modelPretransforms.json
assets/Models/creatures/: texturemap.json
assets/Models/creatures/person2/: texturemap.json
assets/Models/creatures/skeleton/: texturemap.json
assets/Models/foliage/: texturemap.json
assets/Models/gameobj/: texturemap.json
assets/Models/items/materials/: texturemap.json
assets/Models/items/weapons/: texturemap.json
assets/Models/objects/: texturemap.json
assets/Models/objects/furniture/: texturemap.json
assets/Scenes/defaultLevel_0/: defaultLevel_0.json  scene.ts
assets/Scenes/defaultLevel_2/: scene.json  scene.ts
assets/Scenes/testscene1/: scene.json
assets/Scenes/testscene2/: someScript.js  testscene2.json
assets/Scripts/client/: client.ts  clienthooks.ts  uihooks.ts
assets/Scripts/client/entity/: inventory.ts
assets/Scripts/client/player/: player.ts
assets/Scripts/compiler/: compiler.js  context.js  file_resolution.js  get_typescript.ps1  get_typescript.sh  host_access.js  require_polyfill.js
assets/Scripts/engine/: engine-init.ts
assets/Scripts/engine/hooks/: hook-manager.ts
assets/Scripts/engine/scene/: scene-loader.ts
assets/Scripts/types/: engine.ts  hook.ts  namespace.ts  scene.ts  spatial.ts
assets/Shaders/: FragmentShader.fs  VertexShader.vs  VertexShaderNoBones.vs  shaderoptions.json
assets/Shaders/core/plane/: plane.fs  (+1 more)
assets/Shaders/lib/: lights.fs  material.fs  math.fs  standarduniform.fs
assets/Shaders/shaderlib/: shaderlib.glsl
assets/Textures/: default_texture_map.json
assets/Textures/Fonts/: fontMap.json  myFont2Map.json  myFontMap.json  sources.txt
docs/: Doxyfile
docs/src/: mainpage.md
docs/src/architecture/: archimprovementtargets.md  architectureindex.md
docs/src/highlevel-design/: highleveldesignindex.md
docs/src/ideas/: optimizationideas.md
docs/src/progress/: bigthings.md  currenttarget.md  progress.md
docs/src/tools/: toolsindex.md
saves/testscene1/: central.sqlite  save.json  world.json
src/launcher/: Makefile
src/launcher/src/: main.c
src/main/c/: build.sh
src/main/c/src/: CMakeLists.txt
src/main/c/src/fluid/dispatch/: dispatcher.c
src/main/c/src/fluid/env/: environment.c
src/main/c/src/fluid/queue/: boundsolver.c  chunk.c  chunkmask.c  islandsolver.c  javainterface.c  metadatacalc.c  sparse.c
src/main/c/src/fluid/sim/: simulator.c
src/main/c/src/fluid/sim/cellular/: cellular.c
src/main/c/src/fluid/sim/grid/: densitystep.c  fluidsim.c  velocitystep.c
src/main/c/src/fluid/sim/grid2/: density.c  flux.c  grid2.c  utilities.c  velocity.c
src/main/c/src/fluid/sim/pressurecell/: bounds.c  density.c  normalization.c  pressure.c  pressurecell.c  tracking.c  velocity.c
src/main/c/src/fluid/sim/sparse/: sparsesimulator.c
src/main/c/src/fluid/tracking/: tracking.c
src/main/c/src/math/: mathutils.c  randutils.c
src/main/c/src/math/ode/: conjugate_gradient.c  diffusion_ode.c  multigrid.c  ode_utils.c
src/main/c/src/math/ode/tuned/: navier_stokes.c
src/main/c/src/mem/: fluidmem.c  pool.c
src/main/c/src/util/: vector.c
src/net/: character.json  combat.json  entity.json  inventory.json  lore.json  player.json  server.json  synchronization.json  terrain.json
src/test/c/: CMakeLists.txt
src/test/c/fluid/dispatch/: dispatcher_tests.c
src/test/c/fluid/queue/: boundsolver_tests.c  islandsolver_tests.c  sparse_tests.c
src/test/c/fluid/sim/: simulator_tests.c  sparsesimulator_tests.c
src/test/c/fluid/sim/cellular/: cellular_tests.c
src/test/c/fluid/sim/grid2/: add_dens_tests.c  advect_projection_tests.c  border_diffusion_tests.c  convergence_tests.c  density_advection_tests.c  density_diffuse_tests.c  finalize_projection_tests.c  full_sim_tests.c  grid2_tests.c  setup_projection_tests.c  solve_projection_tests.c  speed_tests.c  velocity_advection_tests.c  velocity_diffuse_tests.c
src/test/c/fluid/sim/pressurecell/: add_gravity_tests.c  add_source_tests.c  advection_tests.c  border_transmission_tests.c  bounds_tests.c  diffuse_tests.c  divergence_tests.c  first_layer_tests.c  normalization_tests.c  pressure_tests.c  pressurecell_problemchunk_1_tests.c  pressurecell_problemchunk_2_tests.c  projection_tests.c  sim_e2e_tests.c
src/test/c/math/: mathutils_tests.c  randutils_tests.c
src/test/c/math/ode/tuned/: navier_stokes_tests.c
src/test/c/util/: chunk_test_utils.c  chunk_test_utils.h  test.c  test.h
(+1302 files in other folders)
